# JetReconstructionBenchmarks.jl

./: README.md  THREAD.md
cjetreconstruction/: README.md
cjetreconstruction/src/: cjetreconstruction-finder.cc
fastjet/: CMakeLists.txt  README.md
fastjet/cmake/: FastJetOpenMP.cmake
fastjet/src/: fastjet-finder.cc  fastjet-utils.cc
genevt/src/: genevts-ee.cc  genevts-pp.cc
results/: chep2026-nb.jl  juliacon2025-cbenchmarks-nb.jl
results-v0/: chep-2024-pp-nb.jl
results/CHEP2026/: all-results.csv  partial_13TeV_Kt_N2Tiled_1.0.csv
src/: benchmark.jl  findmin-benchmark.jl  merge-thread-scan.jl  plot-thread-scan.jl  thread-benchmark-all.sh  thread-run.jl  thread-scan-json.sh  thread-scan.sh
